# plain-config

./: .gitignore  LICENSE  MANIFEST.in  README.md  TESTING.md  plain_config.py  pyproject.toml  setup.py  tox.ini  wing11-3.14.wpr  wing11.wpr
.githooks/: pre-commit
.github/workflows/: test.yaml
unittests/: test_plain_config.py
